# x5-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  config.example.yaml  config.yaml  preprocess.py  process_dataset.py  pyproject.toml
base_up/: base_up.sh  fill_in_DB.py  qa_df_pairs_db.csv
base_up/qdrant_storage/: raft_state.json
base_up/qdrant_storage/collections/X5_database/0/: newest_clocks.json  replica_state.json
base_up/qdrant_storage/collections/X5_database/0/segments/552afd04-1e53-44f9-9b98-9df2f16fcccd/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
base_up/qdrant_storage/collections/X5_database/0/segments/552afd04-1e53-44f9-9b98-9df2f16fcccd/payload_index/: IDENTITY  LOG  MANIFEST-000005
base_up/qdrant_storage/collections/X5_database/0/segments/7e0929b7-20dc-4aa7-800c-913e5d18c1e7/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
base_up/qdrant_storage/collections/X5_database/0/segments/7e0929b7-20dc-4aa7-800c-913e5d18c1e7/payload_index/: IDENTITY  LOG  MANIFEST-000005
base_up/qdrant_storage/collections/X5_database/0/segments/9c800e5d-459e-49c8-8d39-f6e642c5c3cc/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
base_up/qdrant_storage/collections/X5_database/0/segments/9c800e5d-459e-49c8-8d39-f6e642c5c3cc/payload_index/: IDENTITY  LOG  MANIFEST-000005
base_up/qdrant_storage/collections/X5_database/0/segments/bd6e770c-d79a-416b-97a0-e3b6c886f3af/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
base_up/qdrant_storage/collections/X5_database/0/segments/bd6e770c-d79a-416b-97a0-e3b6c886f3af/payload_index/: IDENTITY  LOG  MANIFEST-000005
env/: .env.example
evaluation/: deepeval_evaluate.py
src/: cli.py  config.py  preprocess.py  reply.py  retriever.py  sanity_check.py  settings.py  shell_demo.py  temp0.py  ui.py  workflow.py  workflow_events.py  workflow_with_tracing.py
src/agentic/: graph.py  llm.py  memory.py  settings.py
src/agentic/agents/: __init__.py
src/agentic/agents/support/: support.py  tools.py
src/workflow_steps/: deduplicate.py  gala_otmena.py  preprocess.py  qa_examples.py  reply.py  retrieve.py  sanity_check.py
